@@ -27,20 +27,20 @@ class Acumulus
     /** @var \Siel\Acumulus\Helpers\Translator */
     protected $translator;
 
-    /** @var Communicator */
-    protected $communicator;
+    /** @var ApiCommunicator */
+    protected $apiCommunicator;
 
     /**
      * Constructor.
      *
-     * @param Communicator $communicator
+     * @param ApiCommunicator $apiCommunicator
      * @param \Siel\Acumulus\Config\Config $config
      * @param \Siel\Acumulus\Helpers\Translator $translator
      */
-    public function __construct(Communicator $communicator, Config $config, Translator $translator)
+    public function __construct(ApiCommunicator $apiCommunicator, Config $config, Translator $translator)
     {
         $this->config = $config;
-        $this->communicator = $communicator;
+        $this->apiCommunicator = $apiCommunicator;
         $this->translator = $translator;
         $this->translator->add(new Translations());
     }
@@ -85,7 +85,7 @@ class Acumulus
      */
     public function getAbout()
     {
-        return $this->communicator->callApiFunction('general/general_about', array())->setMainResponseKey('general', false);
+        return $this->apiCommunicator->callApiFunction('general/general_about', array())->setMainResponseKey('general', false);
     }
 
     /**
@@ -215,7 +215,7 @@ class Acumulus
     {
         // For picklists, the main result is found under the name of the
         // picklist but in singular form, i.e. without the s at the end.
-        return $this->communicator->callApiFunction("picklists/picklist_$picklist", array())->setMainResponseKey($picklist, true);
+        return $this->apiCommunicator->callApiFunction("picklists/picklist_$picklist", array())->setMainResponseKey($picklist, true);
     }
 
     /**
@@ -245,7 +245,7 @@ class Acumulus
             'vatdate' => $date,
             'vatcountry' => $countryCode,
         );
-        return $this->communicator->callApiFunction('lookups/lookup_vatinfo', $message, true)->setMainResponseKey('vatinfo', true);
+        return $this->apiCommunicator->callApiFunction('lookups/lookup_vatinfo', $message, true)->setMainResponseKey('vatinfo', true);
     }
 
     /**
@@ -273,7 +273,7 @@ class Acumulus
      */
     public function invoiceAdd(array $invoice, Result $result = null)
     {
-        return $this->communicator->callApiFunction('invoices/invoice_add', $invoice, true, $result)->setMainResponseKey('invoice');
+        return $this->apiCommunicator->callApiFunction('invoices/invoice_add', $invoice, true, $result)->setMainResponseKey('invoice');
     }
 
     /**
@@ -300,7 +300,7 @@ class Acumulus
         $message = array(
             'conceptid' => (int) $conceptId,
         );
-        return $this->communicator->callApiFunction('invoices/invoice_concept_info', $message)->setMainResponseKey('concept');
+        return $this->apiCommunicator->callApiFunction('invoices/invoice_concept_info', $message)->setMainResponseKey('concept');
     }
 
     /**
@@ -348,7 +348,7 @@ class Acumulus
         $message = array(
             'entryid' => (int) $entryId,
         );
-        return $this->communicator->callApiFunction('entry/entry_info', $message)->setMainResponseKey('entry');
+        return $this->apiCommunicator->callApiFunction('entry/entry_info', $message)->setMainResponseKey('entry');
     }
 
     /**
@@ -382,7 +382,7 @@ class Acumulus
             'entryid' => (int) $entryId,
             'entrydeletestatus' => (int) $deleteStatus,
         );
-        return $this->communicator->callApiFunction('entry/entry_deletestatus_set', $message)->setMainResponseKey('entry');
+        return $this->apiCommunicator->callApiFunction('entry/entry_deletestatus_set', $message)->setMainResponseKey('entry');
     }
 
     /**
@@ -411,7 +411,7 @@ class Acumulus
         $message = array(
             'token' => (string) $token,
         );
-        return $this->communicator->callApiFunction('invoices/invoice_paymentstatus_get', $message)->setMainResponseKey('invoice');
+        return $this->apiCommunicator->callApiFunction('invoices/invoice_paymentstatus_get', $message)->setMainResponseKey('invoice');
     }
 
     /**
@@ -451,7 +451,7 @@ class Acumulus
             'paymentstatus' => (int) $paymentStatus,
             'paymentdate' => (string) $paymentDate,
         );
-        return $this->communicator->callApiFunction('invoices/invoice_paymentstatus_set', $message)->setMainResponseKey('invoice');
+        return $this->apiCommunicator->callApiFunction('invoices/invoice_paymentstatus_set', $message)->setMainResponseKey('invoice');
     }
 
     /**
@@ -499,7 +499,7 @@ class Acumulus
         if (!empty($invoiceNotes)) {
             $message['invoicenotes'] = (string) $invoiceNotes;
         }
-        return $this->communicator->callApiFunction('invoices/invoice_mail', $message)->setMainResponseKey('invoice');
+        return $this->apiCommunicator->callApiFunction('invoices/invoice_mail', $message)->setMainResponseKey('invoice');
     }
 
     /**
@@ -521,7 +521,7 @@ class Acumulus
      */
     public function getInvoicePdfUri($token, $applyGraphics = true)
     {
-        $uri = $this->communicator->getUri('invoices/invoice_get_pdf');
+        $uri = $this->apiCommunicator->getUri('invoices/invoice_get_pdf');
         $uri .= "?token=$token";
         if (!$applyGraphics) {
             $uri .= '&gfx=0';
@@ -545,7 +545,7 @@ class Acumulus
      */
     public function getPackingSlipUri($token)
     {
-        $uri = $this->communicator->getUri('delivery/packing_slip_get_pdf');
+        $uri = $this->apiCommunicator->getUri('delivery/packing_slip_get_pdf');
         $uri .= "?token=$token";
         return $uri;
     }
@@ -599,6 +599,6 @@ class Acumulus
         $message = array(
             'signup' => $signup,
         );
-        return $this->communicator->callApiFunction('signup/signup.php', $message, false)->setMainResponseKey('signup');
+        return $this->apiCommunicator->callApiFunction('signup/signup.php', $message, false)->setMainResponseKey('signup');
     }
 }
