@@ -25,8 +25,11 @@ use Siel\Acumulus\PluginConfig;
  *   setting up the connection, sending the request, receiving the response.
  * - Good error handling.
  */
-class Communicator
+class ApiCommunicator
 {
+    /** @var \Siel\Acumulus\ApiClient\HttpCommunicator */
+    protected $httpCommunicator;
+
     /** @var \Siel\Acumulus\Config\Config */
     protected $config;
 
@@ -42,13 +45,15 @@ class Communicator
     /**
      * Communicator constructor.
      *
+     * @param \Siel\Acumulus\ApiClient\HttpCommunicator $httpCommunicator
      * @param \Siel\Acumulus\Helpers\Container $container
      * @param \Siel\Acumulus\Config\Config $config
      * @param \Siel\Acumulus\Helpers\Translator $translator
      * @param \Siel\Acumulus\Helpers\Log $log
      */
-    public function __construct(Container $container, Config $config, Translator $translator, Log $log)
+    public function __construct(HttpCommunicator $httpCommunicator, Container $container, Config $config, Translator $translator, Log $log)
     {
+        $this->httpCommunicator = $httpCommunicator;
         $this->container = $container;
         $this->config = $config;
         $this->translator = $translator;
@@ -193,7 +198,7 @@ class Communicator
         // The tagname is ignored by the Acumulus WebAPI.
         $message = $this->convertArrayToXml(['myxml' => $message]);
         $result->setRawRequest($message);
-        $rawResponse = $this->sendHttpPost($uri, ['xmlstring' => $message], $result);
+        $rawResponse = $this->httpCommunicator->post($uri, ['xmlstring' => $message], $result);
         $result->setRawResponse($rawResponse);
 
         if (empty($rawResponse)) {
@@ -233,65 +238,6 @@ class Communicator
         }
 
         return $result;
-    }
-
-    /**
-     * Sends the contents of $post to the given $uri.
-     *
-     * @param string $uri
-     *   The uri to send the HTTP request to.
-     * @param array|string $post
-     *   An array of values to be placed in the POST body or an url-encoded
-     *   string that contains all the POST values
-     * @param \Siel\Acumulus\ApiClient\Result $result
-     *   The result structure to add the results to.
-     *
-     * @return string
-     *  The response body from the HTTP response.
-     *
-     * @throws \RuntimeException
-     */
-    protected function sendHttpPost($uri, $post, Result $result)
-    {
-        // Open a curl connection.
-        $ch = curl_init();
-        if (!$ch) {
-            $this->raiseCurlError($ch, 'curl_init()');
-        }
-
-        // Configure the curl connection.
-        // Since 2017-09-19 the Acumulus web service only accepts TLS 1.2.
-        // - Apparently, some curl libraries do support this version but do not
-        //   use it by default, so we force it.
-        // - Apparently, some up-to-date curl libraries do not define this
-        //   constant,so we define it, if not defined.
-        if (!defined('CURL_SSLVERSION_TLSv1_2')) {
-            define('CURL_SSLVERSION_TLSv1_2', 6);
-        }
-        $options = [
-            CURLOPT_URL => $uri,
-            CURLOPT_RETURNTRANSFER => true,
-            CURLOPT_POST => true,
-            CURLOPT_POSTFIELDS => $post,
-            CURLOPT_SSLVERSION => CURL_SSLVERSION_TLSv1_2,
-            CURLOPT_TIMEOUT => 20,
-            //CURLOPT_PROXY => '127.0.0.1:8888', // Uncomment to debug with Fiddler.
-            //CURLOPT_SSL_VERIFYPEER => false, // Uncomment to debug with Fiddler.
-        ];
-        if (!curl_setopt_array($ch, $options)) {
-            $this->raiseCurlError($ch, 'curl_setopt_array()');
-        }
-
-        // Send and receive over the curl connection.
-        $result->setIsSent(true);
-        $response = curl_exec($ch);
-        if ($response === false) {
-            $this->raiseCurlError($ch, 'curl_exec()');
-        }
-        // Close the connection (this operation cannot fail).
-        curl_close($ch);
-
-        return $response;
     }
 
     /**
@@ -419,29 +365,6 @@ class Communicator
         }
 
         return $element;
-    }
-
-    /**
-     * Adds a curl error message to the result.
-     *
-     * @param resource|bool $ch
-     * @param string $function
-     *
-     * @throws \RuntimeException
-     */
-    protected function raiseCurlError($ch, $function)
-    {
-        $env = $this->config->getEnvironment();
-        $message = sprintf('%s (curl: %s): ', $function, $env['curlVersion']);
-        if ($ch) {
-            $code = curl_errno($ch);
-            $message .= sprintf('%d - %s', $code, curl_error($ch));
-        } else {
-            $code = 703;
-            $message .= 'no curl handle';
-        }
-        curl_close($ch);
-        throw new RuntimeException($message, $code);
     }
 
     /**
